--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,8 +31,8 @@ jobs:
       run: npm install --only=prod --ignore-scripts
     - name: Mend CLI Scan
       env:
-        MEND_EMAIL: ${{secrets.MEND_SCA_EMAIL}}
-        MEND_USER_KEY: ${{secrets.MEND_SCA_USERKEY}}
+        MEND_EMAIL: ${{secrets.MEND_EMAIL}}
+        MEND_USER_KEY: ${{secrets.MEND_USER_KEY}}
         MEND_URL: https://saas.whitesourcesoftware.com
       run: |
         echo "Downloading Mend CLI"
